--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Establece el conjunto de caracteres del documento a UTF-8 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Garantiza la compatibilidad con versiones anteriores de Internet Explorer -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Configura la vista para dispositivos móviles, estableciendo el ancho en el ancho del dispositivo y el nivel de zoom inicial en 1 -->
     <title>2048 Game</title>
+    <!-- Título de la página -->
     <link rel="stylesheet" href="styles.css" />
+    <!-- Enlace al archivo de estilos CSS -->
     <script src="script.js" type="module"></script>
+    <!-- Enlace al archivo JavaScript con tipo de módulo -->
   </head>
   <body>
+    <!-- Contenido del cuerpo de la página -->
     <div id="game-board"></div>
+    <!-- Contenedor para el tablero del juego con el id "game-board" -->
   </body>
 </html>
-
-
-
-
-
